--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "bootstrap": "^5.2.0",
     "canvas": "^2.9.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
+    "sass": "^1.54.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
